# lmcode

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LMCODE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: README.md
docs/api/: plugins.md  tools-registry.md
docs/architecture/: 01_system_architecture.drawio  02_agent_loop.drawio  03_lms_integration.drawio  04_module_map.drawio  lmcode.drawio  overview.md
docs/development/: contributing.md  setup.md
docs/features/: cli.md  config.md  session.md  tools.md
playground/: README.md  calculator.py  data.json  notes.txt  script.sh  test_newlines.py
src/lmcode/: __init__.py  __main__.py  lms_bridge.py
src/lmcode/agent/: _display.py  _noise.py  _prompt.py  core.py
src/lmcode/cli/: app.py  chat.py  config_cmd.py  mcp.py  run.py  session.py
src/lmcode/config/: lmcode_md.py  paths.py  settings.py
src/lmcode/plugins/: hookspecs.py  manager.py
src/lmcode/session/: models.py
src/lmcode/tools/: __init__.py  base.py  filesystem.py  registry.py  search.py  shell.py
src/lmcode/ui/: _interactive_prompt.py  banner.py  colors.py  status.py
tests/: conftest.py  test_lms_bridge.py  test_smoke.py
tests/test_agent/: test_core.py  test_display.py  test_noise.py
tests/test_cli/: test_chat.py
tests/test_tools/: test_filesystem.py  test_search.py  test_shell.py
tests/test_ui/: test_banner.py
