[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmcode"]

# ---------------------------------------------------------------------------
# Project
# ---------------------------------------------------------------------------

[project]
name = "lmcode"
version = "0.6.0"
description = "A local coding agent CLI powered by LM Studio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "cli", "lmstudio", "coding-assistant", "local-llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3.0",
    "textual>=0.80",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "lmstudio>=1.6.0b1",
    "fastmcp>=2.0",
    "pluggy>=1.5",
    "platformdirs>=4.2",
    "gitpython>=3.1",
    "tomli-w>=1.0",
]

[project.scripts]
lmcode = "lmcode.cli.app:app"

[project.entry_points."lmcode.plugins"]
# third-party plugins register here

[project.urls]
Homepage = "https://github.com/VforVitorio/lmcode"
Repository = "https://github.com/VforVitorio/lmcode"
Issues = "https://github.com/VforVitorio/lmcode/issues"

# ---------------------------------------------------------------------------
# Dev dependencies
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["lmcode"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["lmstudio.*", "pluggy.*", "textual.*", "prompt_toolkit.*", "git.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running LM Studio instance",
]
addopts = "-ra -q"
